plugins {
    id 'com.android.application'
    id 'kotlin-android'
    id 'kotlin-android-extensions'
    id 'kotlin-kapt'

    id 'maven-publish' // maven-publish 플러그인 추가
}

android {
    compileSdkVersion 29
    buildToolsVersion "29.0.0"

    defaultConfig {
        applicationId "com.example.refresh_selection"
        minSdkVersion 26
        targetSdkVersion 29
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        multiDexEnabled true
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    kotlinOptions {
        jvmTarget = '1.8'
    }
    aaptOptions {
        noCompress "tflite"
    }
    testOptions {
        unitTests.all {
            // All the usual Gradle options.
            jvmArgs '-XX:MaxPermSize=256m'
        }
        unitTests.returnDefaultValues = true
    }
    lintOptions{
        abortOnError false
        checkReleaseBuilds false
    }

    packagingOptions {
//        exclude 'META-INF/native-image/**'
//        exclude 'nd4j-native.properties'

        exclude 'META-INF/DEPENDENCIES'
        exclude 'META-INF/NOTICE'
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/LICENSE.txt'
        exclude 'META-INF/NOTICE.txt'
        exclude 'META-INF/ASL2.0'
        exclude 'build.xml'
        exclude 'META-INF/LICENSE.md'
        exclude 'META-INF/NOTICE.md'
    }

}

dependencies {

    def nav_version = "2.3.3"
    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
    implementation 'com.google.code.gson:gson:2.8.2'
    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
    implementation 'com.android.volley:volley:1.1.0'
    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
    implementation 'androidx.core:core-ktx:1.3.2'
    implementation 'androidx.appcompat:appcompat:1.2.0'
    implementation 'com.google.android.material:material:1.3.0'
    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
    implementation files('libs/libDaumMapAndroid.jar')
    testImplementation 'junit:junit:4.+'
//
    implementation "com.kakao.sdk:v2-user:2.8.1" // 카카오 로그인
    implementation "com.kakao.sdk:v2-navi:2.8.1" // 카카오내비
    //GUI 꾸미는 것
//    implementation 'com.google.android.material:material:1.0.0'
//    implementation 'com.google.code.gson:gson:2.8.5'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'

    implementation group: 'org.deeplearning4j', name: 'deeplearning4j-modelimport', version: '1.0.0-beta4'
    implementation group: 'org.deeplearning4j', name: 'deeplearning4j-nlp', version: '1.0.0-beta4'
    implementation group: 'org.deeplearning4j', name: 'deeplearning4j-nn', version: '1.0.0-beta4'
    implementation group: 'org.deeplearning4j', name: 'deeplearning4j-datavec-iterators', version: '1.0.0-beta4'
    implementation group: 'org.datavec', name: 'datavec-api', version: '1.0.0-beta4'
    implementation group: 'org.deeplearning4j', name: 'deeplearning4j-common', version: '1.0.0-beta4'
//    implementation 'org.nd4j:python4j-numpy:1.0.0-M1'
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha1'
    implementation group: 'org.nd4j', name: 'nd4j-tensorflow', version: '1.0.0-beta4'

    implementation('com.google.guava:guava:20.0'){
        exclude group: 'org.nd4j', module:'protobuf'
    }


    implementation (group: 'org.deeplearning4j', name: 'deeplearning4j-core', version: '1.0.0-beta4') {
        exclude group: 'org.bytedeco', module: 'opencv-platform'
        exclude group: 'org.bytedeco', module: 'leptonica-platform'
        exclude group: 'org.bytedeco', module: 'hdf5-platform'
    }
    implementation group: 'org.nd4j', name: 'nd4j-native', version: '1.0.0-beta4'
    implementation group: 'org.nd4j', name: 'nd4j-native', version: '1.0.0-beta4', classifier: "android-arm"
    implementation group: 'org.nd4j', name: 'nd4j-native', version: '1.0.0-beta4', classifier: "android-arm64"
    implementation group: 'org.nd4j', name: 'nd4j-native', version: '1.0.0-beta4', classifier: "android-x86"
    implementation group: 'org.nd4j', name: 'nd4j-native', version: '1.0.0-beta4', classifier: "android-x86_64"
    implementation group: 'org.nd4j', name: 'nd4j-native-platform', version: '1.0.0-beta4'
    implementation group: 'org.deeplearning4j', name: 'deeplearning4j-parallel-wrapper', version: '1.0.0-beta4'
    implementation group: 'org.bytedeco', name: 'openblas', version: '0.3.6-1.5.1'
    implementation group: 'org.bytedeco', name: 'openblas', version: '0.3.6-1.5.1', classifier: "android-arm"
    implementation group: 'org.bytedeco', name: 'openblas', version: '0.3.6-1.5.1', classifier: "android-arm64"
    implementation group: 'org.bytedeco', name: 'openblas', version: '0.3.6-1.5.1', classifier: "android-x86"
    implementation group: 'org.bytedeco', name: 'openblas', version: '0.3.6-1.5.1', classifier: "android-x86_64"
    implementation group: 'org.bytedeco', name: 'opencv', version: '4.1.0-1.5.1'
    implementation group: 'org.bytedeco', name: 'opencv', version: '4.1.0-1.5.1', classifier: "android-arm"
    implementation group: 'org.bytedeco', name: 'opencv', version: '4.1.0-1.5.1', classifier: "android-arm64"
    implementation group: 'org.bytedeco', name: 'opencv', version: '4.1.0-1.5.1', classifier: "android-x86"
    implementation group: 'org.bytedeco', name: 'opencv', version: '4.1.0-1.5.1', classifier: "android-x86_64"
    implementation group: 'org.bytedeco', name: 'leptonica', version: '1.78.0-1.5'
    implementation group: 'org.bytedeco', name: 'leptonica', version: '1.78.0-1.5', classifier: "android-arm"
    implementation group: 'org.bytedeco', name: 'leptonica', version: '1.78.0-1.5', classifier: "android-arm64"
    implementation group: 'org.bytedeco', name: 'leptonica', version: '1.78.0-1.5', classifier: "android-x86"
    implementation group: 'org.bytedeco', name: 'leptonica', version: '1.78.0-1.5', classifier: "android-x86_64"

//    implementation group: 'org.jpmml', name: 'jpmml-sklearn', version: '1.5.22'
//    implementation group: 'org.datavec', name: 'datavec-spark_2.12', version: '1.0.0-beta5'


}